appId: host.exp.exponent
---
- openLink: "exp://192.168.1.62:8081"
- tapOn:
    id: "email-input"
- inputText: "test@example.com"
- tapOn:
    id: "username-input"
- inputText: "testuser"
- tapOn:
    id: "password-input"
- inputText: "test123456"
- hideKeyboard
- tapOn:
    id: "sign-in-button"
- extendedWaitUntil:
    visible:
      text: ".*signed in.*"
    timeout: 75000
- assertVisible:
    text: ".*signed in.*"
    optional: true
